# vhdx-rs

./: .gitmodules  AGENTS.md  API.md  Cargo.toml  README.md  rustfmt.toml
.sisyphus/: boulder.json  ralph-loop.local.md
.sisyphus/drafts/: api-alignment-full.md  vhdx-complete-analysis.md
.sisyphus/evidence/: f1-plan-compliance.txt  f2-code-quality-review.txt  f3-manual-qa.txt  f4-scope-fidelity-final.txt  final-scope-mapping.md  task-1-baseline-map.txt  task-1-inventory-diff.txt  task-1-inventory.md  task-1-plan-matrix-error.txt  task-1-plan-matrix.txt  task-1-validationissue-getters-error.txt  task-1-validationissue-getters.txt  task-10-failure-replay.txt  task-10-quality-gates.txt  task-10-strict-matrix-error.txt  task-10-strict-matrix.txt  task-11-bat-nondefault-error.txt  task-11-bat-nondefault.txt  task-12-validator-parity-error.txt  task-12-validator-parity.txt  task-13-policy-consistency-error.txt  task-13-policy-consistency.txt  task-14-header-create-doc-error.txt  task-14-header-create-doc.txt  task-15-doc-examples-error.txt  task-15-doc-examples.txt  task-16-quality-gates-error.txt  task-16-quality-gates.txt  task-17-alignment-report-error.txt  task-17-alignment-report.txt  task-18-code-quality-error.txt  task-18-code-quality.txt  task-19-scope-fidelity-error.txt  task-19-scope-fidelity.txt  task-2-bat-chunk-ratio.txt  task-2-build.txt  task-2-io-write-error.txt  task-2-io-write.txt  task-2-required-parentlocator-error.txt  task-2-required-parentlocator.txt  (+54 more)
.sisyphus/plans/: api-alignment-full.md  api-md-all-gaps-ultra-plan.md  api-md-code-parity.md  api-md-parity-remediation.md  doc-implementation-alignment.md  fix-plan-impl-gaps.md  fix-validate-metadata-compliance.md  full-alignment-api-msvhdx.md  ms-vhdx-compliance-remediation.md  ms-vhdx-gap-closure.md  ms-vhdx-spec-plan-gap-closure.md  namespace-refactor.md  spec-conformance-gap-remediation.md  sync-code-for-accessor-only-api.md  vhdx-refactor.md  (+2 more)
Standard/: MS-VHDX-只读扩展标准.md  MS-VHDX-宽松扩展标准.md  MS-VHDX-校验扩展标准.md  MS-VHDX.md重点解读.md
cli/: Cargo.toml
docs/: API.md  README.md  VHDX-Compliance-Summary.md  env.md  index.md  structure.md  vhdx-api-design(old).md
src/: bat.rs  block.rs  crc32c.rs  error.rs  file.rs  guid.rs  header.rs  io_module.rs  lib.rs  log.rs  main.rs  metadata.rs  region.rs  sections.rs  types.rs  validation.rs  vhdx.rs
tests/: api_surface_smoke.rs  integration_test.rs  mod.rs
vhdx-cli/: Cargo.toml
vhdx-cli/src/: cli.rs  main.rs
vhdx-cli/src/commands/: check.rs  create.rs  diff.rs  info.rs  mod.rs  repair.rs  sections_cmd.rs
vhdx-cli/src/utils/: mod.rs  size.rs
vhdx-cli/tests/: cli_integration.rs
(+132 files in other folders)
