[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace]
members = ["vhdx-cli"]
resolver = "2"

[workspace.dependencies]
uuid = { version = "1.22", features = ["v4"] }
thiserror = "2.0.18"
byteorder = "1.5"
clap = { version = "4.6", features = ["derive"] }
crc32c = "0.6"
tempfile = "3.27"

# Main library crate
[package]
name = "vhdx-rs"
version.workspace = true
edition.workspace = true
description = "VHDX (Virtual Hard Disk v2) library"

[dependencies]
uuid.workspace = true
thiserror.workspace = true
byteorder.workspace = true
crc32c.workspace = true

[dev-dependencies]
tempfile.workspace = true
