[package]
name = "vhdx-tool"
version.workspace = true
edition.workspace = true
description = "VHDX (Virtual Hard Disk v2) CLI tool"

[dependencies]
vhdx-rs = { path = ".." }
clap = { version = "4.6", features = ["derive"] }
byte-unit = { version = "5.2", features = ["byte"] }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"

[lints]
workspace = true
